Minor changes to material assets

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -180,7 +180,7 @@ LastLevel=/Game/StarterContent/Maps/MaterialsProject
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -200,13 +200,21 @@ MaterialEditorInstanceConstant="\"Object\" "
 MaterialEditorParameters="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
+MaterialExpressionConstant="\"Object\" "
+MaterialExpressionConstant4Vector="\"Object\" "
+MaterialExpressionVectorParameter="\"Object\" "
+MaterialExpressionParameter="\"Object\" "
+MaterialExpressionScalarParameter="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 OpenAssetsAtExit=/Game/Materials/MM_Basic.MM_Basic
+OpenAssetsAtExit=/Game/Materials/MI_BASIC_2.MI_BASIC_2
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -299,6 +307,22 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionConstant4Vector.MaterialExpressionConstant4Vector=True
+MaterialExpressionConstant4Vector.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialEditorInstanceConstant.ParameterGroups=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -1643,18 +1667,21 @@ LastDirectory=
 RecentsFiles=D:/UE_5.5/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/MI_BASIC_2.MI_BASIC_2;
 RecentlyPlaced=/Game/Materials/MI_BASIC_01.MI_BASIC_01;
 RecentlyPlaced=/Game/Materials/MM_Basic.MM_Basic;
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/MI_BASIC_01
-MRUItem1=/Engine/BasicShapes/Sphere
-MRUItem2=/Game/Materials/MM_Basic
+MRUItem0=/Game/Materials/MI_BASIC_2
+MRUItem1=/Game/Materials/MI_BASIC_01
+MRUItem2=/Engine/BasicShapes/Sphere
+MRUItem3=/Game/Materials/MM_Basic
 
 [AssetEditorToolkitTabLocation]
 /Game/Materials/MM_Basic.MM_Basic=1
 /Engine/BasicShapes/Sphere.Sphere=0
+/Game/Materials/MI_BASIC_01.MI_BASIC_01=1
 
 [MaterialEditor]
 PrimType=1
@@ -1840,4 +1867,8 @@ PreferredCommandExecutor=Python
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Materials=True
+
+[MaterialInstanceEditor]
+bDrawGrid=False
+PrimType=1
 
